[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pluxtools"
version = "0.1.0"
description = "Convert .plux files to image formats and compute surface heterogeneity metrics."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
  { name = "DrATedder", email = "a.tedder@bradford.ac.uk" }
]
keywords = ["plux", "image", "surface", "metrics", "heterogeneity"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License"
]
dependencies = [
  "numpy",
  "pandas",
  "scikit-image",
  "opencv-python",
  "tqdm",
  "Pillow"
]

[project.urls]
Homepage = "https://github.com/DrATedder/pluxtools"
Repository = "https://github.com/DrATedder/pluxtools"
